Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-66727

[Android]: When changing focus between TextInput fields there is a flicker of the QQuickWidget

    XMLWordPrintable

Details

    • Android
    • 6bbba5576c9477c61721bc4fbb761752d98c23d2 (qt/tqtc-qtbase/5.15) 072387edecb2269097821e35f1f232da6c657650
    • 2020wk26, 2020wk28, 2022wk26FOQtforAndroid, 2022wk28FOQtforAndroid, 2022wk32FOQtforAndroid, 2022wk34FOQtforAndroid, 2022wk36FOQtforAndroid, 2022wk38FOQtforAndroid

    Description

      When changing focus between TextInput fields there is a flicker of the QQuickWidget. In the example provided, press on one textinput and then the other to see the issue occuring.

      Attachments

        1. qtbug66727.zip
          2 kB
          Andy Shaw
        2. screencapture-1611229377784.mp4
          759 kB
          lukasz.kosiorowski
        3. Screenshot from 2021-02-26 08-16-25.png
          206 kB
          Pekka Gehör
        4. screen-20210316-085303_000.mp4
          3.26 MB
          Pekka Gehör
        5. OneTextInputRepro.mp4
          594 kB
          Bartlomiej Moskal
        6. ThreadSleep.mp4
          637 kB
          Bartlomiej Moskal
        7. RootSize.mp4
          424 kB
          Bartlomiej Moskal

        Issue Links

          For Gerrit Dashboard: QTBUG-66727
          # Subject Branch Project Status CR V

          Activity

            People

              samuelmira Samuel Mira
              andysh Andy Shaw
              Veli-Pekka Heinonen Veli-Pekka Heinonen
              Rami Potinkara Rami Potinkara
              Votes:
              4 Vote for this issue
              Watchers:
              17 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: