Android: Fix screen flicker issues

When changing focus between TextInput fields there is a flicker of the QQuickWidget

Fixes: QTBUG-66727
Change-Id: I9f31f43dee1bbbf213422978a35e752a8ceff56c
Reviewed-by: Rami Potinkara <rami.potinkara@qt.io>